--- a/written/eLifeRevision/Bittner_eLife2020.tex
+++ b/written/eLifeRevision/Bittner_eLife2020.tex
@@ -528,12 +528,8 @@ The distribution of connectivities inferred by EPI exhibited this same effect in
 \label{fig:SC_opto}
 \end{figure}
 
-To examine how connectivity affects response to delay period inactivation, we grouped connectivities of the EPI distribution along the continuum linking regimes 1 and 2 of Section \ref{results_SC}:
-\begin{equation}\label{eq:mode_group}
-Z(sW)  = \{\mathbf{z} ~~\text{if}~\argmin_{y \in Y} |\mathbf{z} - \mathbf{z}^*(y)|_2 = sW, ~~\text{for}~z \sim q_{\bm{\theta}}(\mathbf{z} \mid \mathcal{X})\},
-\end{equation}
-where $Y = \{-1., -0.75, ..., 1.\}$ are the values of $sW$ for which we calculated the mode.
-$Z(sW)$ is then the set of EPI samples for which the closest mode was $\mathbf{z}^*(sW)$ (see Section \ref{methods_sc_regime}).
+To examine how connectivity affects response to delay period inactivation, we grouped connectivities of the EPI distribution along the continuum linking regimes 1 and 2 of Section \ref{results_SC}.
+$Z(sW)$ is the set of EPI samples for which the closest mode was $\mathbf{z}^*(sW)$ (see Section \ref{methods_sc_regime}).
 In the following analyses, we examine how error, and the influence of connectivity eigenvalue on Anti error change along this continuum of connectivities.
 Obtaining the parameter samples for these analysis with the learned EPI distribution was more than 20,000 times faster than a brute force approach (see Section \ref{methods_sc_group}).
 
@@ -676,7 +672,8 @@ q_{\bm{\theta}}(\mathbf{z} \mid \mathcal{X}) = q_{\bm{\theta}}^*(\mathbf{z}) &= 
 where $H(q_{\bm{\theta}}(\mathbf{z})) = \mathbb{E}_{\mathbf{z}}\left[- \log q_{\bm{\theta}}(z) \right]$ is entropy.
 By maximizing the entropy of the inferred distribution $q_{\bm{\theta}}$, we select the most random distribution in family $\mathcal{Q}$ that satisfies the constraints of the emergent property.
 Because entropy is maximized in Equation \ref{eq:opt}, EPI is equivalent to bayesian variational inference (see Section \ref{methods_VI}).
-To run this constrained optimization, we use an augmented lagrangian objective, which is the standard approach for constrained optimization \cite{bertsekas2014constrained}, and the approach taken to fit Maximum Entropy Flow Networks (MEFNs) \cite{loaiza2017maximum}.
+\q{AL_standard}{
+To run this constrained optimization, we use an augmented lagrangian objective, which is the standard approach for constrained optimization \cite{bertsekas2014constrained}, and the approach taken to fit Maximum Entropy Flow Networks (MEFNs) \cite{loaiza2017maximum}.}
 This procedure is detailed in Section \ref{methods_AL_opt} and the pseudocode in Algorithm \ref{alg:epi}.
 
 In the remainder of Section \ref{methods_EPI}, we will explain the finer details and motivation of the EPI method. 
@@ -825,7 +822,15 @@ The following objective is minimized:
 \begin{equation} \label{eq:AL}
 L(\bm{\theta}; \bm{\eta}_{\text{opt}}, c) = -H(q_{\bm{\theta}}) + \bm{\eta}_{\text{opt}}^\top R(\bm{\theta}) + \frac{c}{2}||R(\bm{\theta})||^2
 \end{equation}
-where average constraint violations $R(\bm{\theta}) = \mathbb{E}_{\mathbf{z} \sim q_{\bm{\theta}}(\mathbf{z})}\left[ \mathbb{E}_{\mathbf{x}\sim p(\mathbf{x} \mid \mathbf{z})}\left[T(\mathbf{x}; \mathbf{z}) - \bm{\mu}_{\text{opt}} \right] \right]$, $\bm{\eta}_{\text{opt}} \in \mathbb{R}^m$ are the lagrange multipliers where $m = |\bm{\mu}_{\text{opt}}| = |T(\mathbf{x}; \mathbf{z})| = 2|f(\mathbf{x}; \mathbf{z})|$,  and $c$ is the penalty coefficient. 
+where there are average constraint violations 
+\begin{equation}
+R(\bm{\theta}) = \mathbb{E}_{\mathbf{z} \sim q_{\bm{\theta}}(\mathbf{z})}\left[ \mathbb{E}_{\mathbf{x}\sim p(\mathbf{x} \mid \mathbf{z})}\left[T(\mathbf{x}; \mathbf{z}) - \bm{\mu}_{\text{opt}} \right] \right],
+\end{equation}
+ $\bm{\eta}_{\text{opt}} \in \mathbb{R}^m$ are the lagrange multipliers where $m$ is the number of total constraints
+\begin{equation}
+m = |\bm{\mu}_{\text{opt}}| = |T(\mathbf{x}; \mathbf{z})| = 2|f(\mathbf{x}; \mathbf{z})|,
+\end{equation}
+and $c$ is the penalty coefficient. 
 The mean parameter $\bm{\mu}_{\text{opt}}$ and sufficient statistics $T(\mathbf{x}; \mathbf{z})$ are determined by the means $\bm{\mu}$ and variances $\bm{\sigma}^2$ of the emergent property statistics $f(\mathbf{x}; \mathbf{z})$ defined in Equation \ref{eq:opt}.
 Specifically, $T(\mathbf{x}; \mathbf{z})$ is a concatenation of the first and second moments (Equation \ref{eq:moments}) and $\bm{\mu}_{\text{opt}}$ is a concatenation of $\bm{\mu}$ and $\bm{\sigma}^2$ (Equation \ref{eq:mu_opt}).
 (Although, note that this algorithm is written for general $T(\mathbf{x}; \mathbf{z})$ and $\bm{\mu}$ to satisfy the more general class of emergent properties.)
@@ -888,10 +893,10 @@ This significance threshold is adjusted through Bonferroni correction according 
 The p-values for each constraint are calculated according to a two-tailed nonparametric test, where 200 estimations of the sample mean $R(\bm{\theta})^i$ are made using $N_{\text{test}}$ samples of $\mathbf{z} \sim q_{\bm{\theta}}(\mathbf{z})$ at the end of the augmented lagrangian epoch.
 Of all $k_{\text{max}}$ augmented lagrangian epochs, we select the EPI inferred distribution as that which satisfies the convergence criteria and has greatest entropy.
 
-When assessing the suitability of EPI for a particular modeling question, there are some important technical considerations. 
+\q{ME_technical}{When assessing the suitability of EPI for a particular modeling question, there are some important technical considerations. 
 First and foremost, as in any optimization problem, the defined emergent property should always be appropriately conditioned (constraints should not have wildly different units).  
 Furthermore, if the program is underconstrained (not enough constraints), the distribution grows (in entropy) unstably unless mapped to a finite support.  
-If overconstrained, there is no parameter set producing the emergent property, and EPI optimization will fail (appropriately).
+If overconstrained, there is no parameter set producing the emergent property, and EPI optimization will fail (appropriately).}
 
 \subsubsection{Example: 2D LDS}\label{methods_2DLDS}
 To gain intuition for EPI, consider a two-dimensional linear dynamical system (2D LDS) model (Fig. \ref{fig:LDS1}A):
@@ -984,68 +989,19 @@ As we expect, the distribution results in samples of two-dimensional linear syst
 
 \subsubsection{EPI as variational inference}\label{methods_VI}
 %Now that we have fully described the EPI method, we  consider its broader contextualization as a statistical method and its relation to Bayesian inference. 
-In bayesian inference a prior belief about model parameters $\mathbf{z}$ is stated in a prior distribution $p(\mathbf{z})$, and the statistical model capturing the effect of $\mathbf{z}$ on observed data points $\mathbf{x}$ is formalized in the likelihood distribution $p(\mathbf{x} \mid \mathbf{z})$.
-In bayesian inference, we obtain a posterior distribution $p(\mathbf{z} \mid \mathbf{x})$, which captures how the data inform our knowledge of model parameters using Bayes' rule:
+In bayesian inference a prior belief about model parameters $\mathbf{z}$ is stated in a prior distribution $p(\mathbf{z})$, and the statistical model capturing the effect of $\mathbf{z}$ on observed data points $\mathbf{x}$ is formalized in the likelihood $p(\mathbf{x} \mid \mathbf{z})$.
+We obtain a posterior distribution $p(\mathbf{z} \mid \mathbf{x})$, which captures how the data inform our knowledge of model parameters using Bayes' rule:
 \begin{equation}
 p(\mathbf{z} \mid \mathbf{x}) = \frac{p(\mathbf{x} \mid \mathbf{z}) p(\mathbf{z})}{p(\mathbf{x})}.
 \end{equation}
 The posterior distribution is analytically available when the prior is conjugate with the likelihood.
-However, conjugacy is rare in practice, and alternative methods, such as variational inference \cite{saul1998mean}, are utilized.
+However, conjugacy is rare in practice, and alternative methods such as variational inference \cite{saul1998mean} are utilized.
 
-%Now, consider the goal of doing variational inference with an exponential family posterior distribution $p(z \mid \mathbf{x})$.  
-%We use the following abbreviated notation to collect the base measure $b(z)$ and sufficient statistics $T(z)$ into $\tilde{T}(z)$ and likewise concatenate a 1 onto the end of the natural parameter $\tilde{\eta}(\mathbf{x})$.  
-%The log normalizing constant $A(\eta(\mathbf{x}))$ remains unchanged:
-%\begin{equation}
-%\begin{split}
-%p(z \mid \mathbf{x}) = b(z) \exp{\left( \eta(\mathbf{x})^\top T(z) - A(\eta(\mathbf{x})) \right)} = \exp{\left( \begin{bmatrix} \eta(\mathbf{x}) \\ 1 \end{bmatrix}^\top \begin{bmatrix} T(z) \\ b(z) \end{bmatrix} - A(\eta(\mathbf{x})) \right)} \\= \exp{\left(\tilde{\eta(\mathbf{x})}^\top \tilde{T}(z) - A(\eta(\mathbf{x})) \right)} 
-%\end{split}.
-%\end{equation}
-%Variational inference with an exponential family posterior distribution uses optimization to minimize the following divergence \cite{blei2017variational}:
-%\begin{equation}
-%q_{\bm{\theta}}^* = \argmin_{q_{\bm{\theta}} \in Q} KL(q_{\bm{\theta}} \mid \mid p(z \mid \mathbf{x})).
-%\end{equation}
-%$q_{\bm{\theta}}(z)$ is the variational approximation to the posterior with variational parameters $\bm{\theta}$.  
-%We can write this KL divergence in terms of entropy of the variational approximation:
-%\begin{equation}
-%KL(q_{\bm{\theta}} \mid \mid p(z \mid \mathbf{x})) = \mathbb{E}_{z \sim q_{\bm{\theta}}} \left[ \log (q_{\bm{\theta}}(z)) \right] - \mathbb{E}_{z \sim q_{\bm{\theta}}} \left[ \log (p(z \mid \mathbf{x})) \right]
-%\end{equation}
-%\begin{equation}
-% = -H(q_{\bm{\theta}}) - \mathbb{E}_{z \sim q_{\bm{\theta}}} \left[ \tilde{\eta}(\mathbf{x})^\top  \tilde{T}(z) - A(\eta(\mathbf{x})) \right].
-%\end{equation}
-%As far as the variational optimization is concerned, the log normalizing constant is independent of $q_{\bm{\theta}}(z)$, so it can be dropped
-%\begin{equation}
-%\argmin_{q_{\bm{\theta}} \in Q} KL(q_{\bm{\theta}} \mid \mid p(z \mid \mathbf{x})) =  \argmin_{q_{\bm{\theta}} \in Q} -H(q_{\bm{\theta}}) - \mathbb{E}_{z \sim q_{\bm{\theta}}} \left[ \tilde{\eta}(\mathbf{x})^\top  \tilde{T}(z) \right].
-%\end{equation}
-% Further, we can write the objective in terms of the first moment of the sufficient statistics $\bm{\mu} = \mathbb{E}_{z \sim p(z \mid \mathbf{x})}\left[T(z) \right]$:
-% \begin{equation}
-%=  \argmin_{q_{\bm{\theta}} \in Q} -H(q_{\bm{\theta}}) - \mathbb{E}_{z \sim q_{\bm{\theta}}} \left[ \tilde{\eta}(\mathbf{x})^\top \left(  \tilde{T}(z) -\bm{\mu} \right) \right] + \tilde{\eta}(\mathbf{x})^\top \bm{\mu},
-% \end{equation}
-%which simplifies to
-%  \begin{equation}
-%=  \argmin_{q_{\bm{\theta}} \in Q} -H(q_{\bm{\theta}}) - \mathbb{E}_{z \sim q_{\bm{\theta}}} \left[ \tilde{\eta}(\mathbf{x})^\top \left(  \tilde{T}(z) -\bm{\mu} \right) \right].
-% \end{equation}.
-%
-%In comparison, in emergent property inference (EPI), we solve the following problem:
-%\begin{equation}
-%q_{\bm{\theta}}^*(z) = \argmax_{q_{\bm{\theta}} \in Q} H(q_{\bm{\theta}}(z)),   \text{  s.t.  } \mathbb{E}_{z \sim q_{\bm{\theta}}}\left[ \mathbb{E}_{\mathbf{x}\sim p(\mathbf{x} \mid z)}\left[T(\mathbf{x})\right] \right] = \bm{\mu}.
-%\end{equation}
-%The Lagrangian objective (without augmentation) is
-%\begin{equation}
-%q_{\bm{\theta}}^* = \argmin_{q_{\bm{\theta}} \in Q} - H(q_{\bm{\theta}}) + \eta_{\text{opt}}^\top \left(\mathbb{E}_{z \sim q_{\bm{\theta}}} \left[\tilde{T}(z) \right] - \bm{\mu} \right).
-%\end{equation}
-%Thus, as the optimization proceeds, $\eta_{\text{opt}}^\top$ should converge to the natural parameter $\tilde{\eta}(\mathbf{x})$ through its adaptations in each epoch (see Section \ref{methods_AL_opt}). 
-%
-%We have shown that there is indeed a clear relationship between Bayesian inference and EPI.
-%Specifically, EPI is executing variational inference in an exponential family posterior,  whose sufficient statistics are the emergent property statistics and mean parameterization are the emergent property values.
-%However, in EPI we  have not specified a prior distribution, or collected data, which can inform us about model parameters.
-%Instead we have a mathematical specification of an emergent property, which the model must produce, and a maximum entropy selection principle.
-%Accordingly, we replace the notation of $p(\mathbf{z} \mid \mathbf{x})$ with $p(\mathbf{z} \mid \mathcal{B})$ conceptualizing an inferred distribution that obeys emergent property $\mathcal{B}$ (see Section \ref{methods_EPI}). 
-
-In variational inference, a posterior approximation $q_{\bm{\theta}}^*$ is chosen from within some variational family $\mathcal{Q}$
+In variational inference, a posterior approximation $q_{\bm{\theta}}^*$ is chosen from within some variational family $\mathcal{Q}$ to be as close as possible to the posterior under the KL divergence criteria
 \begin{equation}
 q_{\bm{\theta}}^*(\mathbf{z}) = \argmin_{q_{\bm{\theta}} \in Q} KL(q_{\bm{\theta}}(\mathbf{z}) \mid \mid p(\mathbf{z} \mid \mathbf{x})).
 \end{equation}
-The KL divergence can be written in terms of entropy of the variational approximation:
+This KL divergence can be written in terms of entropy of the variational approximation:
 \begin{equation}
 KL(q_{\bm{\theta}}(\mathbf{z})  \mid \mid p(\mathbf{z} \mid \mathbf{x})) = \mathbb{E}_{\mathbf{z} \sim q_{\bm{\theta}}} \left[ \log (q_{\bm{\theta}}(\mathbf{z})) \right] - \mathbb{E}_{\mathbf{z} \sim q_{\bm{\theta}}} \left[ \log (p(\mathbf{z} \mid \mathbf{x})) \right]
 \end{equation}
@@ -1054,46 +1010,74 @@ KL(q_{\bm{\theta}}(\mathbf{z})  \mid \mid p(\mathbf{z} \mid \mathbf{x})) = \math
 \end{equation}
 Since the marginal distribution of the data $p(\mathbf{x})$ (or ``evidence") is independent of $\bm{\theta}$, variational inference is executed by optimizing the remaining expression.
 This is usually framed as maximizing the evidence lower bound (ELBO)
-\begin{equation}
+\begin{equation} \label{eq:VI_opt}
 \argmin_{q_{\bm{\theta}} \in Q} KL(q_{\bm{\theta}} \mid \mid p(\mathbf{z} \mid \mathbf{x})) = \argmax_{q_{\bm{\theta}} \in Q} H(q_{\bm{\theta}}) + \mathbb{E}_{\mathbf{z} \sim q_{\bm{\theta}}} \left[ \log (p(\mathbf{x} \mid \mathbf{z}))  + \log(p(\mathbf{z}))\right].
 \end{equation}
 
-Now, consider the setting where we have chosen a uniform prior, and stipulate a mean-field gaussian likelihood on a chosen statistic of the data $f(\mathbf{x}; \mathbf{z})$
-\begin{equation}
-p(\mathbf{x} \mid \mathbf{z}) = \mathcal{N}(f(\mathbf{x}; \mathbf{z}) \mid \bm{\mu}_f, \Sigma_f),
-\end{equation}
-where $\Sigma_f = \text{diag}(\bm{\sigma}_f^2)$.
-The log likelihood is then proportional to a dot product of the natural parameter of this mean-field gaussian distribution and the first and second moment statistics.
-\begin{equation}
-\log p(\mathbf{x} \mid \mathbf{z}) \propto \bm{\eta}_f^\top T(\mathbf{x}, \mathbf{z}),
-\end{equation}
-where
-\begin{equation} 
-\label{eq:eta_f}
-\bm{\eta}_{f} = \begin{bmatrix} \frac{\bm{\mu}_f}{\bm{\sigma}_f^2} \\ \frac{-1}{2\bm{\sigma}_f^2} \end{bmatrix}, \text{ and}
-\end{equation}
-\begin{equation}
-T(\mathbf{x}; \mathbf{z}) = \begin{bmatrix} f(\mathbf{x}; \mathbf{z}) \\ \left( f(\mathbf{x}; \mathbf{z}) - \bm{\mu}_f \right)^2 \end{bmatrix}.
-\end{equation}
-The variational objective is then
-\begin{equation}
-\label{eq:VI_obj}
-\argmax_{q_{\bm{\theta}} \in Q} H(q_{\bm{\theta}}) + \bm{\eta}_f^\top \mathbb{E}_{\mathbf{z} \sim q_{\bm{\theta}}}\left[ T(\mathbf{x}; \mathbf{z}) \right].
-\end{equation}
-
-Comparing this to the lagrangian objective (without augmentation) of EPI, we see they are the same
+Now, we will show how the maximum entropy problem of EPI is equivalent to variational inference.
+In general, a maximum entropy problem (as in Equation \ref{eq:max_ent}) has an equivalent lagrange dual form:
 \begin{equation}
 \begin{split}
-q_{\bm{\theta}}^*(\mathbf{z}) &= \argmin_{q_{\bm{\theta}} \in Q} - H(q_{\bm{\theta}}) + \bm{\eta}_{\text{opt}}^\top \left(\mathbb{E}_{\mathbf{z}, \mathbf{x}} \left[T(\mathbf{x}; \mathbf{z}) \right] - \bm{\mu}_{\text{opt}} \right) \\
- &= \argmin_{q_{\bm{\theta}} \in Q} - H(q_{\bm{\theta}}) + \bm{\eta}_{\text{opt}}^\top \mathbb{E}_{\mathbf{z}, \mathbf{x}} \left[T(\mathbf{x}; \mathbf{z}) \right].
-\end{split}
+\argmax_{q \in \mathcal{Q}} H(q(\mathbf{z})) &\Longleftrightarrow \argmax_{q \in \mathcal{Q}} H(q(\mathbf{z})) + \bm{\eta}^{*\top} \mathbb{E}_{\mathbf{z} \sim q} \left[ \phi(\mathbf{z}) \right], \\
+  \text{s.t.  } \mathbb{E}_{\mathbf{z} \sim q}\left[\phi(\mathbf{z})\right] = \mathbf{0}~& \\
+ \end{split}
+\end{equation} 
+with sufficient statistics $\phi(\cdot)$ and lagrange multipliers $\bm{\eta}^*$.
+By moving the lagrange multipliers within the expectation
+\begin{equation}q^* = \argmax_{q \in \mathcal{Q}} H(q(\mathbf{z})) + \mathbb{E}_{\mathbf{z} \sim q} \left[\bm{\eta}^{*\top} \phi(\mathbf{z}) \right],
+\end{equation} 
+inserting a $\log \exp(\cdot)$ within the expectation, 
+\begin{equation} q^* = \argmax_{q \in \mathcal{Q}} H(q(\mathbf{z})) + \mathbb{E}_{\mathbf{z} \sim q} \left[\log \exp \left( \bm{\eta}^{*\top} \phi(\mathbf{z}) \right) \right],
 \end{equation}
-where $T(\mathbf{x}; \mathbf{z})$ consists of the first and second moments of the emergent property statistic $f(\mathbf{x}; \mathbf{z})$ (Equation \ref{eq:moments}).
-\q{ME_prior}{Thus, EPI is implicitly executing variational inference with a uniform prior and a mean-field gaussian likelihood on the emergent property statistics.
-The mean and variances of the mean-field gaussian likelihood are predicated by $\bm{\eta}_{\text{opt}}$ (Equations \ref{eq:eta_f} and \ref{eq:VI_obj}), which is adapted after each EPI optimization epoch based on $\mathcal{X}$ (see Section \ref{methods_AL_opt}).}
-In EPI, the inferred distribution is not conditioned on a finite dataset as in variational inference, but rather the emergent property $\mathcal{X}$ dictates the likelihood parameterization such that the inferred distribution will produce the emergent property.
-As a note, we could not simply choose $\bm{\mu}_f$ and $\bm{\sigma}_f$ directly from the outset, since we do not know which of these choices will produce the emergent property $\mathcal{X}$, which necessitates the EPI optimization routine that adapts $\bm{\eta}_{\text{opt}}$.
-Accordingly, we replace the notation of $p(\mathbf{z} \mid \mathbf{x})$ with $p(\mathbf{z} \mid \mathcal{X})$ conceptualizing an inferred distribution that obeys emergent property $\mathcal{X}$ (see Section \ref{methods_EPI}). 
+and finally replacing $\phi(\cdot)$ with the sufficient statistics of the EPI optimization
+\begin{equation} \label{eq:epi_vi}
+q^* = \argmax_{q \in \mathcal{Q}} H(q(\mathbf{z})) + \mathbb{E}_{\mathbf{z} \sim q} \left[\log \exp \left( \bm{\eta}^{*\top} \begin{bmatrix} \mathbb{E}_{\mathbf{x} \sim p(\mathbf{x} \mid \mathbf{z})} \left[ T_1(\mathbf{x}; \mathbf{z}) \right] \\ ... \\ \mathbb{E}_{\mathbf{x} \sim p(\mathbf{x} \mid \mathbf{z})} \left[ T_m(\mathbf{x}; \mathbf{z}) \right] \end{bmatrix} \right) \right],
+\end{equation}
+we can then compare to the objective used in variational inference  (Equation \ref{eq:VI_opt}).
+\q{EPI_VI}{
+We see that EPI is exactly variational inference with an exponential family likelihood defined by sufficient statistics $\phi(z) = \mathbb{E}_{\mathbf{x} \sim p(\mathbf{x} \mid \mathbf{z})} \left[ T(\mathbf{x}; \mathbf{z}) \right]$, and where the natural parameter $\bm{\eta}^*$ is predicated by the mean parameter $\bm{\mu}_{\text{opt}}$.
+Equation \ref{eq:epi_vi} implies that EPI uses an improper (or uniform) prior, which is easily changed.}
+
+This derivation of the equivalence between EPI and variational inference emphasizes why defining a statistical inference program by its mean parameterization $\bm{\mu}_{\text{opt}}$ is so useful.
+With EPI, one can clearly define the emergent property $\mathcal{X}$ that the model of interest should produce through intuitive selection of $\bm{\mu}_{\text{opt}}$ for a given $T(\mathbf{x}; \mathbf{z})$.
+Alternatively, figuring out the correct natural parameters $\bm{\eta}^*$ for the same $T(\mathbf{x}; \mathbf{z})$ that produces $\mathcal{X}$ will be generally unclear.
+
+%Now, consider the setting where we have chosen a uniform prior, and stipulate a mean-field gaussian likelihood on a chosen statistic of the data $f(\mathbf{x}; \mathbf{z})$
+%\begin{equation}
+%p(\mathbf{x} \mid \mathbf{z}) = \mathcal{N}(f(\mathbf{x}; \mathbf{z}) \mid \bm{\mu}_f, \Sigma_f),
+%\end{equation}
+%where $\Sigma_f = \text{diag}(\bm{\sigma}_f^2)$.
+%The log likelihood is then proportional to a dot product of the natural parameter of this mean-field gaussian distribution and the first and second moment statistics.
+%\begin{equation}
+%\log p(\mathbf{x} \mid \mathbf{z}) \propto \bm{\eta}_f^\top T(\mathbf{x}, \mathbf{z}),
+%\end{equation}
+%where
+%\begin{equation} 
+%\label{eq:eta_f}
+%\bm{\eta}_{f} = \begin{bmatrix} \frac{\bm{\mu}_f}{\bm{\sigma}_f^2} \\ \frac{-1}{2\bm{\sigma}_f^2} \end{bmatrix}, \text{ and}
+%\end{equation}
+%\begin{equation}
+%T(\mathbf{x}; \mathbf{z}) = \begin{bmatrix} f(\mathbf{x}; \mathbf{z}) \\ \left( f(\mathbf{x}; \mathbf{z}) - \bm{\mu}_f \right)^2 \end{bmatrix}.
+%\end{equation}
+%The variational objective is then
+%\begin{equation}
+%\label{eq:VI_obj}
+%\argmax_{q_{\bm{\theta}} \in Q} H(q_{\bm{\theta}}) + \bm{\eta}_f^\top \mathbb{E}_{\mathbf{z} \sim q_{\bm{\theta}}}\left[ T(\mathbf{x}; \mathbf{z}) \right].
+%\end{equation}
+
+%Comparing this to the lagrangian objective (without augmentation) of EPI, we see they are the same
+%\begin{equation}
+%\begin{split}
+%q_{\bm{\theta}}^*(\mathbf{z}) &= \argmin_{q_{\bm{\theta}} \in Q} - H(q_{\bm{\theta}}) + \bm{\eta}_{\text{opt}}^\top \left(\mathbb{E}_{\mathbf{z}, \mathbf{x}} \left[T(\mathbf{x}; \mathbf{z}) \right] - \bm{\mu}_{\text{opt}} \right) \\
+% &= \argmin_{q_{\bm{\theta}} \in Q} - H(q_{\bm{\theta}}) + \bm{\eta}_{\text{opt}}^\top \mathbb{E}_{\mathbf{z}, \mathbf{x}} \left[T(\mathbf{x}; \mathbf{z}) \right].
+%\end{split}
+%\end{equation}
+%where $T(\mathbf{x}; \mathbf{z})$ consists of the first and second moments of the emergent property statistic $f(\mathbf{x}; \mathbf{z})$ (Equation \ref{eq:moments}).
+%\q{ME_prior}{Thus, EPI is implicitly executing variational inference with a uniform prior and a mean-field gaussian likelihood on the emergent property statistics.
+%The mean and variances of the mean-field gaussian likelihood are predicated by $\bm{\eta}_{\text{opt}}$ (Equations \ref{eq:eta_f} and \ref{eq:VI_obj}), which is adapted after each EPI optimization epoch based on $\mathcal{X}$ (see Section \ref{methods_AL_opt}).}
+%In EPI, the inferred distribution is not conditioned on a finite dataset as in variational inference, but rather the emergent property $\mathcal{X}$ dictates the likelihood parameterization such that the inferred distribution will produce the emergent property.
+%As a note, we could not simply choose $\bm{\mu}_f$ and $\bm{\sigma}_f$ directly from the outset, since we do not know which of these choices will produce the emergent property $\mathcal{X}$, which necessitates the EPI optimization routine that adapts $\bm{\eta}_{\text{opt}}$.
+%Accordingly, we replace the notation of $p(\mathbf{z} \mid \mathbf{x})$ with $p(\mathbf{z} \mid \mathcal{X})$ conceptualizing an inferred distribution that obeys emergent property $\mathcal{X}$ (see Section \ref{methods_EPI}). 
 
 \subsection{Stomatogastric ganglion}\label{methods_STG}
 In Section \ref{results_motivating} and \ref{results_dgm}, we used EPI to infer conductance parameters in a model of the stomatogastric ganglion (STG) \cite{gutierrez2013multiple}.
@@ -1456,14 +1440,7 @@ The sums of squares of each pair of parameters are shown for each EPI distributi
 
 \subsubsection{Sensitivity analyses}
 In Fig. \ref{fig:V1}E, we visualize the modes of $q_{\bm{\theta}}(\mathbf{z} \mid \mathcal{X})$ throughout the $\sigma_E$-$\sigma_P$ marginal.
-Specifically, we calculated
-\begin{equation}
-\begin{split}
-\mathbf{z}^*(\sigma_{P,\text{fixed}}) = &\argmax_{\mathbf{z}} \log q_{\bm{\theta}}(\mathbf{z} \mid \mathcal{X}) \\
-&\text{s.t. } \sigma_P = \sigma_{P,\text{fixed}}\
-\end{split}
-\end{equation}
-At each mode $\mathbf{z}^*$, we calculated the Hessian and visualized the sensitivity dimension in the direction of positive $\sigma_E$.
+At each local mode $\mathbf{z}^*(\sigma_P)$, where $\sigma_P$ is fixed, we calculated the Hessian and visualized the sensitivity dimension in the direction of positive $\sigma_E$.
 
 \subsubsection{Testing for the paradoxical effect}
 The paradoxical effect occurs when a populations steady state rate is decreased (or increased) when an increase (decrease) in current is applied to that population \cite{tsodyks1997paradoxical}.
@@ -1779,7 +1756,7 @@ During all mode identification optimizations, the learning rate was reduced by h
 
 \subsubsection{Sample grouping by mode} \label{methods_sc_group}
 For the analyses in Figure \ref{fig:SC_opto}C and Figure \ref{fig:SC5}, we obtained parameters for each step along the continuum between regimes 1 and 2 by sampling from the EPI distribution.
-Each sample was assigned to the closest mode $\mathbf{z}^*(sW)$ (Equation \ref{eq:mode_group}).
+Each sample was assigned to the closest mode $\mathbf{z}^*(sW)$.
 Sampling continued until 500 samples were assigned to each mode, which took 2.67 seconds (5.34ms/sample-per-mode).
 It took 9.59 minutes to obtain just 5 samples for each mode with brute force sampling requiring accuracies between 60\% and 90\% in each task (115s/sample-per-mode).
 This corresponds to a sampling speed increase of roughly 21,500 once the EPI distribution has been learned.
