update algo and pass through paper.

--- a/written/eLifeRevision/Response.tex
+++ b/written/eLifeRevision/Response.tex
@@ -120,7 +120,7 @@ Furthermore, we emphasize that SNPE does not constrain the properties of the inf
 
 \textbf{3. The extent to which this method is generally/straightforwardly applicable was in doubt. It seemed as though a significant amount of computation was required to do inference on one specified property and that the computation would need to be run afresh to query a new property. The methodology in the cosubmission (Macke) made clear that computation required for successive inferences is 'amortized' during training on random parameters. Moreover, EPI seemed less flexible than the cosubmission's approach in that it required a differentiable loss function. The complementarity and advantages of this approach as opposed to the cosubmission's approach are therefore unclear. } 
 
-We respectfully disagree with this characterization, but we take responsibility here: we certainly needed to improve our exposition and comparisons to clarify the general applicability of EPI.  We have done so, and what results is a meaningful comparison with the cosubmission (SNPE, Macke et al, now published) and other methods.  Of course there is a tradeoff (no free lunch, as usual), and these new analyses clarify when EPI is preferable to SNPE, and vice versa.  
+We respectfully disagree with this characterization, but we take responsibility here: we certainly needed to improve our exposition and comparisons to clarify the general applicability of EPI.  We have done so, and what results is a meaningful comparison with the cosubmission (SNPE, Macke et al, now published) and other methods.  Of course, there is a tradeoff (no free lunch, as usual), and these new analyses clarify when EPI is preferable to SNPE, and vice versa.  
 
 First, unlike SNPE, EPI leverages gradients of the emergent property throughout optimization, which leads to better efficiency and scalability (Section 3.3).   This is the usual tradeoff of gradient-based vs sampling-based methods.  The emergent properties of many models in neuroscience are tractably differentiable, four of which we analyze in this manuscript ranging across levels of biological realism, network size, and computational function. This tradeoff is now explained in the Discussion (Section \ref{discussion}).
 
@@ -296,7 +296,7 @@ We agree with the reviewer that hyperparameter sensitivity and global optima are
 Similarly, training deep networks via EPI to learn parameter distributions became easier throughout this research project as we learned through trial and error what works well.  
 In fact, there has been extraordinary progress in the field of deep probability distributions (specifically normalizing flows), that have allowed EPI to converge regularly while capturing complex structure (e.g. Dinh et al. 2017 and Kingma et al. 2018).  
 This manuscript's explanation of hyperparameter choices and the extensive set of examples in the online code will serve as valuable guidelines for future research using this method.
-Every figure of this paper is reproducible with the jupyter notebooks, and there are several tutorials for understanding the most consequential hyperparameters: the augmented Lagrangian constant and deep probability distribution architecture.  
+Every figure of this paper is reproducible with the jupyter notebooks, and there are several tutorials for understanding the most consequential hyperparameters: the augmented lagrangian constant and deep probability distribution architecture.  
 
 In general, we cannot know if we have obtained the global maximum entropy distribution for a given emergent property.  
 The reviewer is correct to point out that multiple distributions may satisfy the emergent property and have different levels of entropy.  
